--- a/index.html
+++ b/index.html
@@ -77,20 +77,22 @@
           <div class="section-home-container">
                <div class="row latest-mix latest-releases">
                     <div class="col-xs-12 col-md-6 col-md-push-6 col-lg-4 col-lg-push-8">
-                         <h2>LATEST MIX:</h2>
-                         <div class="embed-responsive embed-responsive-16by9">
-                              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/5iM8E2B0yIo?rel=0"></iframe>
-                         </div>
-                         <div class="projects-homepage hidden-xs hidden-sm">
-                              <h3><i>"First Lady of Slovenian Techno"</i></h3>
-                              <a href="projects.html">
-                                   <h4>PROJECTS:</h4>
-                              </a>
-                              <p><b>Urban Divas</b> is a project created after many years of experience in the field of organisation, booking and participation in various projects on the basis of a number of experiences and cooperation in the promotion of
-                                   female DJs in Slovenia, neighboring Croatia and Belgium.</p>
-                              <hr>
-                              <p><b>BodyWork</b> puts "Underground Techno" into a wider club environment. Trick-C has come up with a new series of intimate and special events which bring freshness and novelty, for all the people who love techno with the
-                                   touch of the pristine underground.</p>
+                         <div class="right-column-homepage">
+                              <h2>LATEST MIX:</h2>
+                              <div class="embed-responsive embed-responsive-16by9">
+                                   <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/5iM8E2B0yIo?rel=0"></iframe>
+                              </div>
+                              <div class="projects-homepage hidden-xs hidden-sm">
+                                   <h3><i>"First Lady of Slovenian Techno"</i></h3>
+                                   <a href="projects.html">
+                                        <h4>PROJECTS:</h4>
+                                   </a>
+                                   <p><b>Urban Divas</b> is a project created after many years of experience in the field of organisation, booking and participation in various projects on the basis of a number of experiences and cooperation in the promotion
+                                        of female DJs in Slovenia, neighboring Croatia and Belgium.</p>
+                                   <hr>
+                                   <p><b>BodyWork</b> puts "Underground Techno" into a wider club environment. Trick-C has come up with a new series of intimate and special events which bring freshness and novelty, for all the people who love techno with
+                                        the touch of the pristine underground.</p>
+                              </div>
                          </div>
                     </div>
 
@@ -145,11 +147,11 @@
                                    <source src="video/mp4/trick-c.mp4" type="video/mp4">
                                     Your browser does not support mp4 video format.
                               </video>
-                              </div>
+                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-lg-5">
-                         <div class="sample-video">     
-                         <div class="caption-sample">
+                         <div class="sample-video">
+                              <div class="caption-sample">
                                    <h3>Red Mama in action</h3>
                               </div>
                               <video width="400px" height="224px" controls controlsList="nodownload">
@@ -158,7 +160,7 @@
                               </video>
                          </div>
                     </div>
-               </div> 
+               </div>
 
 
           </div>
