--- a/music.html
+++ b/music.html
@@ -54,7 +54,7 @@
      <section class="container-fluid section-page-container section-image">
           <div class="row page-heading image-soundwave">
                <div class="col-xs-12">
-                    <h2>&nbsp;</h2>
+                    <h2 class="text-hide">Mixes</h2>
                </div>
           </div>
 
