added alt text for images

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                          <h2>LATEST RELEASES:</h2>
                          <div class="boxes-releases">
                               <a href="releases.html">                              
-                                   <img src="images/releases/release1.jpg" class="img-circle">
+                                   <img src="images/releases/release1.jpg" class="img-circle" alt="album image">
                               </a>
                               <div class="caption">
                                    <h3>The Remixes, Vol. 4</h3>
@@ -116,7 +116,7 @@
                          </div>
                          <div class="boxes-releases">
                               <a href="releases.html">                              
-                                   <img src="images/releases/release2.jpg" class="img-circle">
+                                   <img src="images/releases/release2.jpg" class="img-circle" alt="album image">
                               </a>
                               <div class="caption">
                                    <h3>Subspace</h3>
@@ -126,7 +126,7 @@
                          </div>
                          <div class="boxes-releases hidden-xs">
                               <a href="releases.html">                              
-                                   <img src="images/releases/release3.jpg" class="img-circle">
+                                   <img src="images/releases/release3.jpg" class="img-circle" alt="album image">
                               </a>
                               <div class="caption">
                                    <h3>Lightness</h3>
