--- a/releases.html
+++ b/releases.html
@@ -143,7 +143,7 @@
                          <h3>Releases</h3>
                     </div>
                     <div class="boxes-releases">
-                         <img src="images/releases/release1.jpg" class="img-circle">
+                         <img src="images/releases/release1.jpg" class="img-circle" alt="album image">
                          <div class="caption">
                               <h3>The Remixes, Vol. 4</h3>
                               <p>Trick-C, Various Artists</p>
@@ -152,7 +152,7 @@
                          </div>
                     </div>
                     <div class="boxes-releases">
-                         <img src="images/releases/release2.jpg" class="img-circle">
+                         <img src="images/releases/release2.jpg" class="img-circle" alt="album image">
                          <div class="caption">
                               <h3>Subspace</h3>
                               <p>Trick-C, A-Brothers, Gabeen</p>
@@ -161,7 +161,7 @@
                          </div>
                     </div>
                     <div class="boxes-releases">
-                         <img src="images/releases/release3.jpg" class="img-circle">
+                         <img src="images/releases/release3.jpg" class="img-circle" alt="album image">
                          <div class="caption">
                               <h3>Lightness</h3>
                               <p>Trick-C, Various Artists</p>
@@ -170,7 +170,7 @@
                          </div>
                     </div>
                     <div class="boxes-releases">
-                         <img src="images/releases/release4.jpg" class="img-circle">
+                         <img src="images/releases/release4.jpg" class="img-circle" alt="album image">
                          <div class="caption">
                               <h3>Ask For Treatment EP</h3>
                               <p>Trick-C, Veztax</p>
@@ -179,7 +179,7 @@
                          </div>
                     </div>
                     <div class="boxes-releases">
-                         <img src="images/releases/release5.jpg" class="img-circle">
+                         <img src="images/releases/release5.jpg" class="img-circle" alt="album image">
                          <div class="caption">
                               <h3>Angular</h3>
                               <p>Trick-C</p>
@@ -188,7 +188,7 @@
                          </div>
                     </div>
                     <div class="boxes-releases">
-                         <img src="images/releases/release6.jpg" class="img-circle">
+                         <img src="images/releases/release6.jpg" class="img-circle" alt="album image">
                          <div class="caption">
                               <h3>Female:pressure</h3>
                               <p>Trick-C, Various Artists</p>
@@ -197,7 +197,7 @@
                          </div>
                     </div>
                     <div class="boxes-releases">
-                         <img src="images/releases/release7.jpg" class="img-circle">
+                         <img src="images/releases/release7.jpg" class="img-circle" alt="album image">
                          <div class="caption">
                               <h3>Linear EP</h3>
                               <p>Trick-C</p>
@@ -206,7 +206,7 @@
                          </div>
                     </div>
                     <div class="boxes-releases">
-                         <img src="images/releases/release8.jpg" class="img-circle">
+                         <img src="images/releases/release8.jpg" class="img-circle" alt="album image">
                          <div class="caption">
                               <h3>Top 20 Highlights</h3>
                               <p>Trick-C, Various Artists</p>
@@ -219,7 +219,7 @@
 
           <div class="row end-button">
                <div class="col-xs-12">
-                    <span class="btn btn-black"><a href="https://www.beatport.com/artist/trick-c/100087" target="_blank">Find More on Beatport</span>
+                    <span class="btn btn-black"><a href="https://www.beatport.com/artist/trick-c/100087" target="_blank">Find More on Beatport</a></span>
                </div>
           </div>
 
